Configuro el jJWT y las CORS